--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,16 @@ body {
 }
 h1 {
     font-size: 50px;
+    padding: 10px;
+    margin: 10px;
 }
 p {
     font-size: 25px;
+    padding: 10px;
+    margin: 10px;
 }
 footer {
     font-size: 15px;
+    padding: 10px;
+    margin: 10px;
 }
